// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Renders the UI snapshot correctly 1`] = `
<div
  align="start"
  className="chakra-tabs tabs  css-0"
  id="452578e0-a17d-4c91-a39a-3eacc8647b97"
>
  <div
    aria-orientation="horizontal"
    className="chakra-tabs__tablist css-k008qs"
    onKeyDown={[Function]}
    role="tablist"
  >
    <button
      aria-controls="452578e0-a17d-4c91-a39a-3eacc8647b97--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="452578e0-a17d-4c91-a39a-3eacc8647b97--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tom Nook
    </button>
    <button
      aria-controls="452578e0-a17d-4c91-a39a-3eacc8647b97--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="452578e0-a17d-4c91-a39a-3eacc8647b97--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Isabelle
    </button>
    <button
      aria-controls="452578e0-a17d-4c91-a39a-3eacc8647b97--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="452578e0-a17d-4c91-a39a-3eacc8647b97--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      K.K. Slider
    </button>
  </div>
  <div
    className="chakra-tabs__tab-panels css-8atqhb"
  >
    <div
      aria-labelledby="452578e0-a17d-4c91-a39a-3eacc8647b97--tab-0"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={false}
      id="452578e0-a17d-4c91-a39a-3eacc8647b97--tabpanel-0"
      role="tabpanel"
      tabIndex={0}
    >
      Tom Nook, known in Japan as Tanukichi, is a fictional character in the Animal Crossing series who operates the village store.
    </div>
    <div
      aria-labelledby="452578e0-a17d-4c91-a39a-3eacc8647b97--tab-1"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={true}
      id="452578e0-a17d-4c91-a39a-3eacc8647b97--tabpanel-1"
      role="tabpanel"
      tabIndex={0}
    />
    <div
      aria-labelledby="452578e0-a17d-4c91-a39a-3eacc8647b97--tab-2"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={true}
      id="452578e0-a17d-4c91-a39a-3eacc8647b97--tabpanel-2"
      role="tabpanel"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Tabs Renders the UI snapshot correctly 2`] = `
<div
  align="start"
  className="chakra-tabs tabs  css-0"
  id="98c225bb-3a51-404b-af22-6ed2bd6c01f6"
>
  <div
    aria-orientation="horizontal"
    className="chakra-tabs__tablist css-k008qs"
    onKeyDown={[Function]}
    role="tablist"
  >
    <button
      aria-controls="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tom Nook
    </button>
    <button
      aria-controls="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Isabelle
    </button>
    <button
      aria-controls="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      K.K. Slider
    </button>
  </div>
  <div
    className="chakra-tabs__tab-panels css-8atqhb"
  >
    <div
      aria-labelledby="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tab-0"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={false}
      id="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tabpanel-0"
      role="tabpanel"
      tabIndex={0}
    >
      Tom Nook, known in Japan as Tanukichi, is a fictional character in the Animal Crossing series who operates the village store.
    </div>
    <div
      aria-labelledby="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tab-1"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={true}
      id="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tabpanel-1"
      role="tabpanel"
      tabIndex={0}
    />
    <div
      aria-labelledby="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tab-2"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={true}
      id="98c225bb-3a51-404b-af22-6ed2bd6c01f6--tabpanel-2"
      role="tabpanel"
      tabIndex={0}
    />
  </div>
</div>
`;

exports[`Tabs Renders the UI snapshot correctly 3`] = `
<div
  align="center"
  className="chakra-tabs tabs  css-0"
  id="e5336546-143c-4b39-abb3-662957f4a324"
>
  <div
    aria-orientation="horizontal"
    className="chakra-tabs__tablist css-k008qs"
    onKeyDown={[Function]}
    role="tablist"
  >
    <button
      aria-controls="e5336546-143c-4b39-abb3-662957f4a324--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="e5336546-143c-4b39-abb3-662957f4a324--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Tom Nook
    </button>
    <button
      aria-controls="e5336546-143c-4b39-abb3-662957f4a324--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="e5336546-143c-4b39-abb3-662957f4a324--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      Isabelle
    </button>
    <button
      aria-controls="e5336546-143c-4b39-abb3-662957f4a324--tabpanel--1"
      aria-selected={false}
      className="chakra-tabs__tab css-5wl5ud"
      id="e5336546-143c-4b39-abb3-662957f4a324--tab--1"
      onClick={[Function]}
      onFocus={[Function]}
      role="tab"
      tabIndex={-1}
      type="button"
    >
      K.K. Slider
    </button>
  </div>
  <div
    className="chakra-tabs__tab-panels css-8atqhb"
  >
    <div
      aria-labelledby="e5336546-143c-4b39-abb3-662957f4a324--tab-0"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={false}
      id="e5336546-143c-4b39-abb3-662957f4a324--tabpanel-0"
      role="tabpanel"
      tabIndex={0}
    >
      Tom Nook, known in Japan as Tanukichi, is a fictional character in the Animal Crossing series who operates the village store.
    </div>
    <div
      aria-labelledby="e5336546-143c-4b39-abb3-662957f4a324--tab-1"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={true}
      id="e5336546-143c-4b39-abb3-662957f4a324--tabpanel-1"
      role="tabpanel"
      tabIndex={0}
    />
    <div
      aria-labelledby="e5336546-143c-4b39-abb3-662957f4a324--tab-2"
      className="chakra-tabs__tab-panel css-sjt5nk"
      hidden={true}
      id="e5336546-143c-4b39-abb3-662957f4a324--tabpanel-2"
      role="tabpanel"
      tabIndex={0}
    />
  </div>
</div>
`;
